[package]
name = "muta-std"
version = "0.1.0"
authors = ["huwenchao <me@huwenchao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ckb-allocator"]

[dependencies]
ckb-allocator = { version = "0.1.1", optional = true }

[build-dependencies]
cc = "1.0"
