[package]
name = "contract"
version = "0.1.0"
authors = ["huwenchao <me@huwenchao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muta-std = { path = "../.." }
hex = { version = "0.4", default-features = false }

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1